--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://MineRadio.jerad.xyz"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "CPMe Radio Bed"
