--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://MineRadio.jerad.xyz"
-title = "CPMe Radio Bed"
+title = "RadioBed"
 theme = "zzo"
 
 defaultContentLanguage = "en"
