--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://MineRadio.jerad.xyz"
-title = "CPMe Radio Bed"
+title = "RadioBed"
 theme = "zzo"
 
-description = "The theme of all Mine Radio friends and beds and computers and bats and you too"
+description = "Birds of a Feather"
