--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,9 +1,9 @@
 [en]
-  title = "Hugo Zzo Theme"
+  title = "RadioBed"
   languageName = "English"
   weight = 1
 
 [ko]
-  title = "Hugo Zzo Theme"
+  title = "RadioBed"
   languageName = "한국어"
   weight = 2
