changed publish dir

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseURL = "https://MineRadio.jerad.xyz"
+baseURL = "http://MineRadio.jerad.xyz"
 title = "RadioBed"
 theme = "zzo"
 
 description = "Birds of a Feather"
 
+publishDir = "docs"
